--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:5000",
+  "homepage": "https://srinjan-ghosh.github.io/React_Todo_App/",
+  "proxy": "https://flask-todo-react-python.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
